2009-01-29	 Nickolay Semyonov-Kolchin <nbkolchin@gmail.com>

	PR 1359/cpukit
	* libcsupport/src/libio.c: rtems_libio_allocate:
	rtems_libio_iop_freelist incorrectly zeroed on semaphore error. Now
	checks error and does not modify anything until sure it has created
	semaphore.

2009-01-29	Gene Smith <gene.smith@siemens.com>

	PR 1363/filesystem
	* libfs/src/dosfs/fat.h: Fix issue where 32 bit values are not written
	correctly in FAT f/s data.

2009-01-29	Eric Norum <norume@aps.anl.gov>

	PR 1364/cpukit
	* libcsupport/src/gxx_wrappers.c: Fix compilation problems when
	diagnostics enabled.

2009-01-21	Nickolay Kolchin <nbkolchin@gmail.com>
	        Joel Sherrill <joel.sherrill@oarcorp.com>

	PR 1357/cpukit
	* rtems/src/tasks.c: Ensure creating a task with no ASR is honored.

2008-12-04	Joel Sherrill <joel.sherrill@OARcorp.com>

	PR 1348/cpukit
	* rtems/src/ratemonperiod.c: Properly handle period statistics after
	cpu usage information is reset while a period is running.

2008-11-03	Joel Sherrill <joel.sherrill@OARcorp.com>

	PR 1333/cpukit
	* libcsupport/include/rtems/termiostypes.h: Typo on type name -- should
	be rtems_device_minor_number.

2008-10-14	Tim Cussins <timcussins@eml.cc>

	PR 1330/cpukit
	* libcsupport/src/malloc.c: Should print begin field not start field.

2008-09-26	Joel Sherrill <joel.sherrill@OARcorp.com>

	PR 1316/cpukit
	* score/src/coremsgbroadcast.c: Give error when message is too large
	like when sending a message. This was the documented behavior.

2008-09-16	Gene Smith <gene.smith@siemens.com>

	PR 564/cpukit
	* sapi/include/confdefs.h: Fix incorrect name. Was missed in an earlier
	renaming sweep.

2008-09-02      Ralf Corsépius <ralf.corsepius@rtems.org>

	PR 1301/cpukit
	* sapi/src/debug.c: Let _Debug_Is_enabled return TRUE|FALSE.

2008-09-01      Ralf Corsépius <ralf.corsepius@rtems.org>

        * libnetworking/netinet/tcp_var.h: Fix broken declaration of
        tcp_trace().

2008-08-19	Cedric Aubert <cedric_aubert@yahoo.fr>
